css/index.css
body {
	margin: 0;
	padding: 0;
	position: relative;
	width: auto;
	background-color: #ffffff;
}
/*-------------------------------------------FONTS---------------------------------------------*/
@font-face {
	font-family: 'audiowide-regular-webfont';
	src: url('../fonts/audiowide-regular-webfont.eot');
	src: url('../fonts/audiowide-regular-webfont.woff') format('woff'), url('../fonts/audiowide-regular-webfont.ttf') format('truetype'), url('../fonts/audiowide-regular-webfont.svg') format('svg');
}
/*-------------------------------------------Preloader animation---------------------------------------------*/
#loader-wrapper {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1000;
}

#loader {
    display: block;
    position: relative;
    left: 50%;
    top: 50%;
    width: 150px;
    height: 150px;
    margin: -75px 0 0 -75px;
    border-radius: 50%;
    border: 3px solid transparent;
    border-top-color: #3498db;
    -webkit-animation: spin 2s linear infinite; /* Chrome, Opera 15+, Safari 5+ */
    animation: spin 2s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */
}
 
#loader:before {
    content: "";
    position: absolute;
    top: 5px;
    left: 5px;
    right: 5px;
    bottom: 5px;
    border-radius: 50%;
    border: 3px solid transparent;
    border-top-color: #e74c3c;
    -webkit-animation: spin 3s linear infinite; /* Chrome, Opera 15+, Safari 5+ */
      animation: spin 3s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */
}
 
#loader:after {
    content: "";
    position: absolute;
    top: 15px;
    left: 15px;
    right: 15px;
    bottom: 15px;
    border-radius: 50%;
    border: 3px solid transparent;
    border-top-color: #f9c922;
    -webkit-animation: spin 1.5s linear infinite; /* Chrome, Opera 15+, Safari 5+ */
    animation: spin 1.5s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */
}
 
@-webkit-keyframes spin {
    0%   {
        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: rotate(0deg);  /* IE 9 */
        transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
    }
    100% {
        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: rotate(360deg);  /* IE 9 */
        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
    }
}
@keyframes spin {
    0%   {
        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: rotate(0deg);  /* IE 9 */
        transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
    }
    100% {
        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
        -ms-transform: rotate(360deg);  /* IE 9 */
        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
    }
}
/*this part is for loader animation*/
#loader-wrapper .loader-section {
    position: fixed;
    top: 0;
    width: 51%;
    height: 100%;
    background: #222222;
    z-index: 1000;
} 
#loader-wrapper .loader-section.section-left {
    left: 0;
}
 
#loader-wrapper .loader-section.section-right {
    right: 0;
}
#loader {
    z-index: 1001; /* anything higher than z-index: 1000 of .loader-section */
}
#content {
		position: relative;
    margin: 0 auto;
    padding-bottom: 50px;
    width: 100%;
    max-width: 1920px;
}
/* Loaded */
.loaded #loader-wrapper .loader-section.section-left {
    -webkit-transform: translateX(-100%);  /* Chrome, Opera 15+, Safari 3.1+ */
    -ms-transform: translateX(-100%);  /* IE 9 */
    transform: translateX(-100%);  /* Firefox 16+, IE 10+, Opera */
}
 
.loaded #loader-wrapper .loader-section.section-right {
    -webkit-transform: translateX(100%);  /* Chrome, Opera 15+, Safari 3.1+ */
    -ms-transform: translateX(100%);  /* IE 9 */
    transform: translateX(100%);  /* Firefox 16+, IE 10+, Opera */
}
.loaded #loader {
    opacity: 0;
}
.loaded #loader-wrapper {
    visibility: hidden;
}
.loaded #loader {
    opacity: 0;
    -webkit-transition: all 0.3s ease-out; 
            transition: all 0.3s ease-out;
}
.loaded #loader-wrapper .loader-section.section-right,
.loaded #loader-wrapper .loader-section.section-left {
 
    -webkit-transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000); 
                transition: all 0.7s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1.000);
}
.loaded #loader-wrapper {
        -webkit-transform: translateY(-100%);
            -ms-transform: translateY(-100%);
                transform: translateY(-100%);
 
        -webkit-transition: all 0.3s 1s ease-out; 
                transition: all 0.3s 1s ease-out;
}
/*----------------------------------------Contact Bar-----------------------------------------*/
#contact_bar {
	margin: 0;
	min-height: 60px;
	min-width: 940px;
	padding: 0;
	width: 100%;
	top: 0px;
	transition: top 0.3s;
	background-color: #262626;
	}
#contact_bar div {
	margin: 0 auto;
	max-width: 940px;
	min-height: 60px;
	padding: 0 10px;
	
}
#contact_bar ul{	
	display: inline-block;
	float: left;
	list-style: none;
	margin: 0;
	padding: 0;
	width: auto;
	}
#contact_bar ul li	{
	float: left;
	color: #ffffff;
	text-decoration: none;
	display: block;
	font-family: Arial;
	font-size: 18px;
	font-weight: normal;
	line-height: 59px;
	margin: 0;
	min-height: 60px;
	padding: 0 24px;
 *padding: 0 23px; /* Needed for IE8 and old versions */
	text-align: center;
	width: auto;
	}
#contact_bar ul li img {
  display: inline-block;
  margin: 0 10px;
}
#contact_bar ul li a {
	color: #ffffff;
	text-decoration: none;
	display: block;
	font-family: Arial;
	font-size: 18px;
	font-weight: normal;
	line-height: 59px;
	margin: 0;
	min-height: 60px;
	padding: 0 24px;
 *padding: 0 23px; /* Needed for IE8 and old versions */
	text-align: center;
	width: auto;
}
/*----------------------------------------header-styles---------------------------------------*/
#header {
	position: fixed;
	top: 60px;
	transition: top 0.3s;
	margin: 0;
	min-height: 120px;
	padding: 0;
	width: 100%;
	min-width: 940px;
	background-color: #fcfcfc;
	opacity: 0.9;
	display: flex;
	justify-content: center;
	align-items: center;
	}
#header div {
	margin: 0 auto;
	width: 100%;
	min-height: 120px;
	padding: 0 10px;
	
}
#header ul{	
	display: inline-block;
	float: left;
	list-style: none;
	margin: 0;
	padding: 0;
	width: auto;
	}
#header ul li	{
	float: left;
	margin: 0;
	padding: 0;
	width: auto;
	}
#header ul li a {
	color: #000000;
	text-decoration: none;
	display: block;
	font-family: Arial;
	font-size: 18px;
	font-weight: normal;
	line-height: 59px;
	margin: 0;
	min-height: 60px;
	padding: 0 24px;
 *padding: 0 23px; /* Needed for IE8 and old versions */
	text-align: center;
	text-transform: uppercase;
	width: auto;
}
/*----------------------------------------poster-styles---------------------------------------*/
#poster {
	position: absolute;
	left: 0;
	margin: 0;
	height: 809px;
	min-height: 809px;
	padding: 0;
	width: auto;
	min-width: 940px;
	background-color: #000000;
	top: 60px;
	z-index: -1;
	}
#poster div {
	margin: 0 auto;
	width: 100%;
	min-height: 120px;
	padding: 0 10px;
}

/*----------------------------------------footer-styles---------------------------------------*/
#footer {
    position: absolute;
		top: 820px;
		left: 0;
    bottom: 0;
    width: 100%;
		height: auto;
		min-height: 60px;
    background-color: #262626;
		z-index: -1;
}

#social_footer {
	position: absolute;
  bottom: 0;
  right: 0;
}
#social_footer img:hover{
	opacity: 0.5;
}

